# FastAPI-Effective-Mobile

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  django.start.sh  docker-compose.yml  pyproject.toml  req.txt
code/: constants.py  database.py  main.py  meta.py
code/orders/: handlers.py  routers.py  schemas.py  services.py
code/products/: handlers.py  routers.py  schemas.py  services.py
migrations/: README  env.py
migrations/versions/: 21fad95a27bf_.py
